// Vitest Snapshot v1

exports[`Test difference tool > Should find the difference between three, two-dimensional object 1`] = `
[
  {
    "conflicts": [
      [
        "b",
      ],
    ],
    "missing": [
      [
        "c",
      ],
      [
        "z",
      ],
    ],
  },
  {
    "conflicts": [
      [
        "b",
      ],
    ],
    "missing": [
      [
        "a",
      ],
      [
        "z",
      ],
    ],
  },
  {
    "conflicts": [],
    "missing": [
      [
        "a",
      ],
      [
        "b",
      ],
    ],
  },
]
`;

exports[`Test difference tool > Should work with nested objects 1`] = `
[
  {
    "conflicts": [
      [
        "b",
      ],
    ],
    "missing": [
      [
        "x",
        "p",
        "k",
      ],
      [
        "x",
        "i",
      ],
      [
        "c",
      ],
    ],
  },
  {
    "conflicts": [
      [
        "c",
      ],
      [
        "b",
      ],
      [
        "x",
        "p",
        "k",
      ],
    ],
    "missing": [
      [
        "x",
        "p",
        "z",
      ],
      [
        "a",
      ],
    ],
  },
  {
    "conflicts": [
      [
        "c",
      ],
      [
        "b",
      ],
      [
        "x",
        "p",
        "k",
      ],
    ],
    "missing": [
      [
        "a",
      ],
    ],
  },
]
`;

exports[`Test difference tool > Should work with nested objects and arrays 1`] = `
[
  {
    "conflicts": [
      [
        "x",
        0,
      ],
    ],
    "missing": [
      [
        "x",
        2,
      ],
      [
        "l",
      ],
    ],
  },
  {
    "conflicts": [
      [
        "x",
        0,
      ],
    ],
    "missing": [
      [
        "x",
        2,
      ],
    ],
  },
  {
    "conflicts": [
      [
        "x",
        0,
      ],
    ],
    "missing": [
      [
        "l",
      ],
    ],
  },
]
`;
